--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "fractal-clock",
+  "name": "rekurz",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
